src/styles/vars.less
// ====== Colors ======
@dark: #0f2e47;
@dark-less: #373e43;
@gray: #6a737d;
@gray-less: #dfe2e5;
@light: #959da5;
@blue: #6cb5fe;
@error: #ac4142;
@accent: #04a9ff;

// ====== Z-indices ======
@index-base: 1000000001;
@index-popup: 1000000002;

// ====== Sizing ======
@header-height: 60px;
@footer-height: 30px;

// ====== Icon names ======
// Octicons: https://octicons.github.com/
// Octicons codes: https://github.com/atom/atom/blob/master/static/variables/octicon-utf-codes.less
@octicons-mark-github: '\f00a';
@octicons-question: '\f02c';
@octicons-key: '\f049';
@octicons-pin: '\f041';
@octicons-gear: '\f02f';
@octicons-link-external: '\f07f';
@octicons-heart: '\2665';
@octicons-chevron-left: '\f0a4';
@octicons-chevron-right: '\f078';
@octicons-chevron-down: '\f0a3';
@octicons-repo: '\f001';
@octicons-git-branch: '\f020';
@octicons-file-directory: '\f016';
@octicons-file-text: '\f011';
@octicons-file-submodule: '\f017';

// ====== Icons ======
.icon-v2(@code; @font-family: octicons; @color: @gray; @hover-color: @error; @font-size: 14px) {
  position: relative;

  &:before {
    content: @code;
    font-family: @font-family;
    color: @color;
    font-size: @font-size;
    font-weight: normal;
    font-style: normal;
    text-align: center;
    width: 16px;
    line-height: 1;
    position: relative;
    display: inline-block;
    -webkit-font-smoothing: antialiased;
  }

  &:hover:before {
    color: @hover-color;
  }
}

